# paeka

./: .dockerignore  .env  .env.example  .gitignore  API_REFERENCE.md  APPLY_INSTRUCTIONS.txt  Dockerfile  FIXES.md  INTEGRATION.md  LICENSE  README.md  SETUP.md  SETUP_DOCKER.md  WEAVIATE_RAFT_CLUSTER_ISSUE_REPORT.md  docker-compose.yml  ingest_folder.ps1  main.py  paeka-full-session.patch  paeka-patch2-today.patch  paeka-patch3-hardening.patch  paeka-sandbox-and-gvisor.patch  paeka-sandbox-fixes.patch  paeka-ui-and-tool-visibility.patch  paeka_redesign_steps1-6.patch  paeka_windows_falkordb_fix.patch  pyproject.toml  rwp-chat-interface.patch  setup.bat  smoke-test-windows-fix.patch  start.bat  stop.bat  test-paeka-api.ps1
backend/agent/: __init__.py  deep_orchestrator.py  graph.py  guardrails.py  iteration_graph.py  react_graph.py  sandbox-seccomp.json  sandbox.py  state.py  tool_graph.py
backend/agent/nodes/: critic.py  planner.py  retriever.py  synthesiser.py
backend/api/: app.py
backend/api/routes/: agent.py  chat.py  chat_control.py  code.py  conversations.py  documents.py  export.py  health.py  knowledge.py  memory.py  models.py  openai_compat.py  sandbox.py  skills.py
backend/ingestion/: __init__.py  pipeline.py  repository.py
backend/ingestion/parsers/: __init__.py  base.py  code_parser.py  dispatcher.py  docling_parser.py  latex_parser.py  marker_parser.py  pymupdf_parser.py  spreadsheet_parser.py
backend/knowledge/: __init__.py  extractor.py  falkor_store.py  graph.py  refinement.py  retriever.py
backend/llm/: __init__.py  base.py  client.py  factory.py  litellm_provider.py  llama_cpp.py  ollama.py  sglang.py
backend/mcp/: client.py  server.py
backend/memory/: __init__.py  repository.py  service.py
backend/models/: __init__.py  downloader.py  loader.py  registry.py
backend/observability/: __init__.py  logfire_setup.py
backend/retrieval/: __init__.py  chunker.py  embedder.py  engine.py  qdrant_store.py  reranker.py  weaviate_store.py
backend/security/: __init__.py  auth.py  content.py  ratelimit.py  request_context.py
backend/shared/: __init__.py  config.py  database.py  logging.py
backend/skills/: __init__.py  manager.py
backend/skills/definitions/: documentation_review.toml  engineering_analysis.toml  scientific_research.toml  software_architecture.toml
backend/skills/definitions/documentation_review/: SKILL.md
backend/skills/definitions/engineering_analysis/: SKILL.md
backend/skills/definitions/scientific_research/: SKILL.md
backend/skills/definitions/software_architecture/: SKILL.md
backend/tools/: __init__.py  diagnostics.py  registry.py  schemas.py  searxng.py  verification.py  websearch.py
config/: qdrant.yaml  settings.toml
database/sqlite/: paeka.db-shm  paeka.db-wal
database/weaviate/: classifications.db  schema.db
database/weaviate/raft/: raft.db
docs/: REVIEW.md
infra/caddy/: Caddyfile
infra/searxng/: settings.yml
models/qwen/: Modelfile  metadata.json
rwp/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
rwp/scripts/: smoke-test-bundle.mjs
rwp/src/: App.svelte  App.test.ts  app.css  main.ts
rwp/src/lib/: markdown.test.ts  markdown.ts  theme.test.ts  theme.ts
rwp/src/lib/ai/: agent.test.ts  agent.ts  reactTransport.test.ts  reactTransport.ts  test-helpers.ts
rwp/src/lib/components/: ChatInput.svelte  ChatInput.test.ts  ChatWindow.svelte  ChatWindow.test.ts  ConnectionSettings.svelte  ConnectionSettings.test.ts  MessageBubble.svelte  MessageBubble.test.ts  MessageList.svelte  MessageList.test.ts  ToolCallBlock.svelte  ToolCallBlock.test.ts  TopNav.svelte  TopNav.test.ts
scripts/: backup.py  download_model.py  gen_token.py  restore.py  setup.ps1  start.ps1  start_fixed.ps1  stop.ps1
tests/integration/: test_api.py
tests/unit/: test_agent_nodes.py  test_agent_routes.py  test_chunker.py  test_config.py  test_deduplication.py  test_diagnostics.py  test_docling_integration.py  test_export.py  test_iteration_graph.py  test_knowledge_graph.py  test_latex_parser.py  test_llm_client.py  test_llm_providers.py  test_parsers.py  test_react_graph.py  test_sandbox.py  test_searxng_client.py  test_security.py  test_skills.py  test_tool_graph.py
