[project]
name = "paeka"
version = "0.11.3"
description = "Personal AI Engineering & Knowledge Assistant"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    # ── Web framework ──────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.18",

    # ── WebSocket backend ──────────────────────────────────────────────
    # wsproto avoids the websockets.legacy DeprecationWarning from websockets 14.x.
    # uvicorn[standard] still pulls in websockets for compatibility but we route
    # traffic through wsproto via --ws wsproto in start.ps1 and main.py.
    "wsproto>=1.2.0",
    "websockets>=14.0",            # pin to keep legacy-free version

    # ── HTTP ───────────────────────────────────────────────────────────
    "httpx>=0.28.0",

    # ── HuggingFace ────────────────────────────────────────────────────
    # hf_xet enables the XetHub large-file transfer backend.
    # No auth token is needed for public models (bge-m3, bge-reranker-large).
    "huggingface-hub[hf_xet]>=0.24.0",

    # ── OpenAI client (Terax / OpenAI-compat endpoint) ────────────────
    "openai>=1.35.0",

    # ── Settings & validation ──────────────────────────────────────────
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # ── Database ───────────────────────────────────────────────────────
    "aiosqlite>=0.20.0",

    # ── PyTorch ───────────────────────────────────────────────────────
    # DEFAULT: CPU-only wheel (fast install, ~500 MB).
    # The LLM runs in llama-server.exe with its own CUDA runtime —
    # CPU torch is sufficient for bge-m3 embeddings + bge-reranker-large.
    #
    # TO SWITCH TO CUDA:
    #   • Comment out the [tool.uv.sources] block below and uncomment the cu128 block.
    #   • OR run:  uv pip install torch torchvision --index-url https://download.pytorch.org/whl/cu128
    #   • Then set PAEKA_RETRIEVAL__EMBED_DEVICE=cuda in .env
    #   • VRAM budget check (ADA 2000, 8 GB):
    #       LLM (Qwen3.5-9B Q4_K_M) ≈ 5.9 GB
    #       bge-m3 (fp16)           ≈ 1.1 GB
    #       bge-reranker-large (fp16)≈ 0.6 GB
    #       ─────────────────────────────────
    #       Total                   ≈ 7.6 GB  ← fits, but very tight
    "torch>=2.5.0",
    "torchvision>=0.20.0",

    # ── Retrieval ─────────────────────────────────────────────────────
    "weaviate-client>=4.9.0",
    "sentence-transformers>=3.3.0",
    "FlagEmbedding>=1.3.0",

    # ── Document Intelligence ──────────────────────────────────────────
    "docling>=2.9.0",
    "docling-core>=2.8.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",

    # ── Knowledge Graph ────────────────────────────────────────────────
    "networkx>=3.4.0",

    # ── Agentic RAG ────────────────────────────────────────────────────
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",

    # ── Utilities ─────────────────────────────────────────────────────
    "rich>=13.9.0",
    "typer>=0.15.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
    "pyright>=1.1.390",
]

[project.scripts]
paeka = "main:app_cli"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

# ── PyTorch wheel index ────────────────────────────────────────────────────
# CPU-only (default — safe for 8 GB GPU already used by the LLM)
[tool.uv.sources]
torch       = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name     = "pytorch-cpu"
url      = "https://download.pytorch.org/whl/cpu"
explicit = true

# ── CUDA 12.8 alternative (uncomment + comment-out the cpu block above) ─────
# Driver 596.59 (CUDA 13.2 in nvidia-smi) is backward-compatible with
# CUDA 12.8 toolkit wheels. cu128 is the latest stable PyTorch CUDA index.
#
# [tool.uv.sources]
# torch       = { index = "pytorch-cu128" }
# torchvision = { index = "pytorch-cu128" }
#
# [[tool.uv.index]]
# name     = "pytorch-cu128"
# url      = "https://download.pytorch.org/whl/cu128"
# explicit = true
#
# After switching: uv sync --reinstall
# Then in .env set:
#   PAEKA_RETRIEVAL__EMBED_DEVICE=cuda
#   PAEKA_RETRIEVAL__RERANKER_DEVICE=cuda

[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pyright]
pythonVersion    = "3.12"
typeCheckingMode = "standard"
venvPath         = "."
venv             = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
