[project]
name = "paeka"
version = "0.11.3"
description = "Personal AI Engineering & Knowledge Assistant"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    # -- Web framework -----------------------------------------------------
    "fastapi>=0.115.0",

    # Granian: Rust-based ASGI server with native WebSocket support.
    # Replaces: uvicorn, wsproto, httptools, websockets (all four removed).
    # The websockets.legacy DeprecationWarning cannot occur because the
    # websockets package is not installed at all.
    "granian>=1.0.0",

    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.18",

    # -- HTTP client -------------------------------------------------------
    "httpx>=0.28.0",

    # -- HuggingFace -------------------------------------------------------
    "huggingface-hub[hf_xet]>=0.24.0",

    # -- OpenAI-compat client (for Terax / pass-through to Ollama) --------
    "openai>=1.35.0",

    # -- Settings & validation ---------------------------------------------
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # -- Database ----------------------------------------------------------
    "aiosqlite>=0.20.0",

    # -- PyTorch -----------------------------------------------------------
    # CPU-only by default. Ollama handles GPU inference natively.
    # Python-side torch is only used for bge-m3 embeddings + reranker.
    # To enable CUDA embeddings: swap [tool.uv.sources] block to cu128 below.
    "torch>=2.5.0",
    "torchvision>=0.20.0",

    # -- Vector store: Qdrant (replaces Weaviate) --------------------------
    # Single binary (qdrant.exe), no Docker needed, no RAFT config.
    # AsyncQdrantClient provides native async without asyncio.to_thread.
    "qdrant-client>=1.9.0",

    # -- Embeddings & reranking --------------------------------------------
    "sentence-transformers>=3.3.0",
    "FlagEmbedding>=1.3.0",

    # -- Document intelligence --------------------------------------------
    "docling>=2.9.0",
    "docling-core>=2.8.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",

    # -- HTML parsing (SearXNG web scraper) --------------------------------
    "beautifulsoup4>=4.12.0",

    # -- Knowledge graph ---------------------------------------------------
    "networkx>=3.4.0",

    # -- Agentic pipeline --------------------------------------------------
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",

    # -- Utilities ---------------------------------------------------------
    "rich>=13.9.0",
    "typer>=0.15.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
    "pyright>=1.1.390",
]

[project.scripts]
paeka = "main:app_cli"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

# -- uv settings -----------------------------------------------------------
[tool.uv]
link-mode = "copy"

# -- PyTorch CPU wheel (default) -------------------------------------------
[tool.uv.sources]
torch       = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name     = "pytorch-cpu"
url      = "https://download.pytorch.org/whl/cpu"
explicit = true

# -- CUDA 12.8 alternative -------------------------------------------------
# ADA 2000 driver 596.59 is backward-compatible with cu128.
# Ollama uses its own bundled CUDA runtime for inference.
# These are only needed if you want GPU-accelerated bge-m3 embeddings.
#
# VRAM budget with CUDA embeddings:
#   Ollama (Qwen3.5-9B Q4_K_M): ~5.9 GB  (managed by Ollama)
#   bge-m3 fp16 (Python):       ~1.1 GB
#   bge-reranker-large fp16:    ~0.6 GB
#   Total:                      ~7.6 GB   (fits in 8 GB, tight)
#
# To enable:
#   1. Comment out the pytorch-cpu [tool.uv.sources] + [[tool.uv.index]] above
#   2. Uncomment below
#   3. Run: uv sync --reinstall
#   4. In .env: PAEKA_RETRIEVAL__EMBED_DEVICE=cuda
#
# [tool.uv.sources]
# torch       = { index = "pytorch-cu128" }
# torchvision = { index = "pytorch-cu128" }
#
# [[tool.uv.index]]
# name     = "pytorch-cu128"
# url      = "https://download.pytorch.org/whl/cu128"
# explicit = true

# -- Linting & type checking -----------------------------------------------
[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pyright]
pythonVersion    = "3.12"
typeCheckingMode = "standard"
venvPath         = "."
venv             = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
