[project]
name = "paeka"
version = "0.11.3"
description = "Personal AI Engineering & Knowledge Assistant"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    # -- Web framework -----------------------------------------------------
    "fastapi>=0.115.0",

    # Granian: Rust-based ASGI server with native WebSocket support.
    # Replaces: uvicorn, wsproto, httptools, websockets (all four removed).
    # The websockets.legacy DeprecationWarning cannot occur because the
    # websockets package is not installed at all.
    "granian>=1.0.0",

    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.18",

    # -- HTTP client -------------------------------------------------------
    "httpx>=0.28.0",

    # -- HuggingFace -------------------------------------------------------
    "huggingface-hub[hf_xet]>=0.24.0",

    # -- OpenAI-compat client (for Terax / pass-through to Ollama) --------
    "openai>=1.35.0",

    # -- Settings & validation ---------------------------------------------
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # -- Database ----------------------------------------------------------
    "aiosqlite>=0.20.0",

    # -- PyTorch -----------------------------------------------------------
    # CPU-only by default. Ollama handles GPU inference natively.
    # Python-side torch is only used for bge-m3 embeddings + reranker.
    # To enable CUDA embeddings: swap [tool.uv.sources] block to cu128 below.
    "torch>=2.5.0",
    "torchvision>=0.20.0",

    # -- Vector store: Qdrant (replaces Weaviate) --------------------------
    # Single binary (qdrant.exe), no Docker needed, no RAFT config.
    # AsyncQdrantClient provides native async without asyncio.to_thread.
    "qdrant-client>=1.9.0",

    # -- Embeddings & reranking --------------------------------------------
    # [FIX] transformers wasn't pinned anywhere (only pulled in
    # transitively via sentence-transformers), and uv.lock was gitignored
    # -- so a clean `uv sync` (e.g. inside the Docker build) was free to
    # resolve transformers to whatever's newest on PyPI, independently of
    # whatever happened to be cached in a native .venv. transformers 5.x
    # rewrote XLMRobertaTokenizer (bge-m3's backbone) to inherit from a new
    # TokenizersBackend class that dropped prepare_for_model -- confirmed
    # by diffing 4.57.6 (last v4.x) against 5.12.1 directly. Something in
    # bge-m3's own loading path still calls that method directly, so every
    # retrieval call was failing internally and silently falling back to
    # 0 passages -- the agent kept answering anyway, just ungrounded, with
    # nothing surfaced to indicate retrieval had broken. sentence-
    # transformers itself declares transformers<6.0.0,>=4.41.0, so <5
    # resolves cleanly against it -- confirmed via its own METADATA, not
    # just trusted.
    "transformers<5",
    "sentence-transformers>=3.3.0",
    "FlagEmbedding>=1.3.0",

    # -- Document intelligence --------------------------------------------
    "docling>=2.9.0",
    "docling-core>=2.8.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",

    # -- HTML parsing (SearXNG web scraper) --------------------------------
    "beautifulsoup4>=4.12.0",

    # -- Knowledge graph ---------------------------------------------------
    "networkx>=3.4.0",
    "falkordblite>=0.10.0",

    # -- Agentic pipeline --------------------------------------------------
    "langgraph>=0.2.0",
    "langchain-core>=1.4.8",
    "langchain>=1.3.11",
    "deepagents>=0.6.12",

    # -- ReAct loop: native function calling via Ollama directly ----------
    # [MIGRATION] litellm removed -- it was an extra abstraction layer that
    # caused several real, concrete problems in this project (a default
    # ~15s startup delay fetching a GitHub-hosted cost-map file irrelevant
    # to a free local model, internal Pydantic settings models flooding
    # the trace, version-coupling overhead) without a benefit that
    # mattered here: we only ever talk to one provider, Ollama. Verified
    # before removing: langchain-ollama's ChatOllama.bind_tools() accepts
    # our existing OpenAI-format MCP tool schemas directly, and its
    # AIMessage.tool_calls already returns the exact LangChain-native
    # shape backend/agent/react_graph.py's tool_node already consumed --
    # so this isn't just a swap, it's also a genuine simplification.
    "langchain-ollama>=0.2.0",

    # -- MCP (Model Context Protocol) --------------------------------------
    # FastMCP server mounted at /mcp inside the FastAPI process.
    # streamable_http_app() requires mcp>=1.1.0; if pinned to mcp==1.0.x,
    # backend/mcp/client.py falls back to sse_client automatically.
    "mcp>=1.1.0",

    # -- Observability (Phase 1, Step 1) -----------------------------------
    # Local-only tracing (send_to_logfire=False, no account, nothing leaves
    # the machine). The [httpx] extra pulls in opentelemetry-instrumentation-
    # httpx, required by logfire.instrument_httpx() -- without it that one
    # call raises RuntimeError (now caught individually in logfire_setup.py
    # so it can't crash the whole app, but better to just install it properly).
    # Optional at the package level -- the app runs fine without logfire at
    # all (backend/observability/logfire_setup.py degrades to a no-op), but
    # it is the explicit Phase 1 priority so it is a core dep, not an extra,
    # for now.
    "logfire[httpx]>=3.0.0",

    # -- Utilities ---------------------------------------------------------
    "typer>=0.15.0",
    "orjson>=3.10.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
    "pyright>=1.1.390",
]

[project.scripts]
paeka = "main:app_cli"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

# -- uv settings -----------------------------------------------------------
[tool.uv]
link-mode = "copy"

# -- PyTorch CPU wheel (default) -------------------------------------------
[tool.uv.sources]
torch       = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name     = "pytorch-cpu"
url      = "https://download.pytorch.org/whl/cpu"
explicit = true

# -- CUDA 12.8 alternative -------------------------------------------------
# ADA 2000 driver 596.59 is backward-compatible with cu128.
# Ollama uses its own bundled CUDA runtime for inference.
# These are only needed if you want GPU-accelerated bge-m3 embeddings.
#
# VRAM budget with CUDA embeddings:
#   Ollama (Qwen3.5-9B Q4_K_M): ~5.9 GB  (managed by Ollama)
#   bge-m3 fp16 (Python):       ~1.1 GB
#   bge-reranker-large fp16:    ~0.6 GB
#   Total:                      ~7.6 GB   (fits in 8 GB, tight)
#
# To enable:
#   1. Comment out the pytorch-cpu [tool.uv.sources] + [[tool.uv.index]] above
#   2. Uncomment below
#   3. Run: uv sync --reinstall
#   4. In .env: PAEKA_RETRIEVAL__EMBED_DEVICE=cuda
#
# [tool.uv.sources]
# torch       = { index = "pytorch-cu128" }
# torchvision = { index = "pytorch-cu128" }
#
# [[tool.uv.index]]
# name     = "pytorch-cu128"
# url      = "https://download.pytorch.org/whl/cu128"
# explicit = true

# -- Linting & type checking -----------------------------------------------
[tool.ruff]
line-length    = 100
# [FIX] Was "py312" -- the project actually runs on Python 3.14 throughout
# this codebase (confirmed via every traceback path seen in development:
# .../AppData/Local/Python/pythoncore-3.14-64/...). Affects which syntax
# modernization suggestions ruff's UP-series rules make.
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

# [FIX] B008 (function-call-in-default-argument) doesn't know about
# FastAPI's special parameter-marker classes (File, Depends, Query, Body,
# Path, Header, Cookie, Form) -- these are NOT ordinary function calls
# whose result gets reused across requests; FastAPI's own dependency-
# injection system recognises and replaces them per-request. Without this,
# ruff flags every `file: UploadFile = File(...)` as if it were the
# genuine mutable-default-argument bug class B008 exists to catch.
# Confirmed against ruff's own documentation as the sanctioned fix for
# this exact, well-known FastAPI false positive.
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends", "fastapi.params.Depends",
    "fastapi.Query", "fastapi.params.Query",
    "fastapi.Body", "fastapi.params.Body",
    "fastapi.Path", "fastapi.params.Path",
    "fastapi.Header", "fastapi.params.Header",
    "fastapi.Cookie", "fastapi.params.Cookie",
    "fastapi.Form", "fastapi.params.Form",
    "fastapi.File", "fastapi.params.File",
]

[tool.pyright]
# [FIX] Same version mismatch as ruff's target-version above.
pythonVersion    = "3.14"
typeCheckingMode = "standard"
venvPath         = "."
venv             = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
